# glpaper-rs

./: .gitignore  Cargo.toml  MsjSW3.frag  mtyGWy.frag
shaders/: default.vert
src/: handlers.rs  main.rs  renderer.rs
src/handlers/: background_layer.rs  list_outputs.rs
src/renderer/: download.rs  output_surface.rs  renderable.rs
src/renderer/assets/: fragment.default.wgsl  fragment.prefix.wgsl  fragment.suffix.wgsl  vertex.wgsl
