[package]
name = "glpaper-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
sctk = { package = "smithay-client-toolkit", git = "https://github.com/Smithay/client-toolkit" }
raw-window-handle = "0.5.2"
wgpu = "0.15.0"
pollster = "0.2.5"
wayland-backend = { version = "0.1.0", features = ["client_system"] }
wayland-client = "0.30.2"
wayland-protocols = { version = "0.30.1", features = ["client", "staging", "unstable"] }
wayland-protocols-wlr = { version = "0.1.0", features = ["client"] }
wayland-csd-frame = { version = "0.2.2", default-features = false, features = ["wayland-backend_0_1"] }
