[package]
name = "glpaper-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
sctk = { package = "smithay-client-toolkit", git = "https://github.com/Smithay/client-toolkit" }
raw-window-handle = "0.5.2"
wgpu = { version = "0.17.0", features = ["glsl"] }
pollster = "0.2.5"
wayland-backend = { version = "0.1.0", features = ["client_system"] }
wayland-client = "0.30.2"
wayland-protocols = { version = "0.30.1", features = ["client", "staging", "unstable"] }
wayland-protocols-wlr = { version = "0.1.0", features = ["client"] }
wayland-csd-frame = { version = "0.2.2", default-features = false, features = ["wayland-backend_0_1"] }
bytemuck = { version = "1.12", features = ["derive"] }
anyhow = "1.0.75"
#wgputoy = { path = "../wgpu-compute-toy", default-features = false }
tokio = { version = "1.32.0", features = ["full"] }
futures = "0.3.28"
cpal = "0.15.2"
spectrum-analyzer = "1.4.0"
maplit = "1.0.2"
image = "0.24.7"
naga = "0.13.0"
reqwest = { version = "0.11.20", features = ["blocking"] }
serde_json = "1.0.107"
serde = { version = "1.0.188", features = ["derive"] }
smithay-egui = { git = "https://github.com/Smithay/smithay-egui", version = "0.1.0" }
egui_demo_lib = "0.22"
egui = "0.22.0"

[dependencies.smithay]
git = "https://github.com/Smithay/smithay.git"
version = "0.3.0"
rev = "58d5bdc"
default-features = false
features = ["backend_winit", "renderer_glow", "wayland_frontend"]
